--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -57,7 +57,7 @@ jobs:
         run: |
           hugo \
             --gc --minify \
-            --baseURL "https://${{ github.repository_owner }}.github.io/<REPO_NAME>/"
+            --baseURL "https://${{ github.repository_owner }}.github.io/hextra-starter-template/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
