--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 # Hugo configuration file
-title: My Site
+title: Machine Learning
 
 # import hextra as module
 module:
@@ -18,29 +18,30 @@ markup:
 
 menu:
   main:
-    - name: Docs
-      pageRef: /docs
+    - name: Introduction
+      pageRef: /about
       weight: 1
-    - name: About
+    - name: EDA
       pageRef: /about
       weight: 2
-    - name: Contact ↗
-      url: "https://github.com/imfing"
+    - name: Models
+      pageRef: /docs
       weight: 3
-    - name: Search
+    - name: Conclusion
+      pageRef: /about
       weight: 4
+    - name: About
+      pageRef: /about
+      weight: 5
+    - name: Search
+      weight: 6
       params:
         type: search
     - name: GitHub
-      weight: 5
+      weight: 7
       url: "https://github.com/imfing/hextra-starter-template"
       params:
         icon: github
-    - name: Twitter
-      weight: 6
-      url: "https://twitter.com/"
-      params:
-        icon: x-twitter
 
 params:
   navbar:
